Fix flickering the Meet the Team section on first load

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -312,7 +312,7 @@ body {
   //height: 300px;
   //width: 65px;
   //background: #F5F5F5;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
   //margin-bottom: 25px;
 }
